administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -25,3 +25,8 @@
 .navigation-menu li.menu-main-calendar:before {
     content: "\f133";
 }
+
+.navigation-menu li.menu-main-department{
+    content: "\f0e8";
+    
+}
