administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -26,7 +26,7 @@
     content: "\f133";
 }
 
-.navigation-menu li.menu-main-department{
+.navigation-menu li.menu-main-department:before{
     content: "\f0e8";
     
 }
