administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -340,10 +340,11 @@ button.primary-btn.nav-new-btn:hover {
 
 
 
-/*cancel icon highlight*/
+/*cancel icon highlight
 .navigation-menu li:before {
     filter: brightness(0);
 }
+*/
 
 
 
