administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -34,3 +34,14 @@
     content: "\f0c0";
     
 }
+
+
+.navigation-menu li.menu-main-tags:before{
+    content: "\f02c";
+}
+.navigation-menu li.menu-main-archive:before{
+    content: "\f187";
+}
+
+
+
