administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -5,6 +5,7 @@
 .navigation-menu li:before {
     content: "\f1b2";
     font-family: FontAwesome;
+    font-size: 20px;
 }
 
 .navigation-menu li.active:before {
