administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -5,7 +5,7 @@ $themeInset:#f0f0f0;
 $tagBtnColor:#e1e1e1;
 
 
-$mainStyleColor:#efa82c;
+$mainStyleColor:#525252;
 $highlightBtnColor:$mainStyleColor;
 
 
