administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -67,6 +67,6 @@
 .priority.priority-indicator:before {
     content: "\f024";
     font-family: FontAwesome;
-    color: #crimson;
+    color: crimson;
     
 }
