administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -73,7 +73,7 @@
 
 
 .completion-indicator:before{
-    content: "\f024";
+    content: "\f10c";
     font-family: FontAwesome;
 }
 .complete.completion-indicator:after{
