administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -76,7 +76,7 @@
     content: "\f10c";
     font-family: FontAwesome;
 }
-.complete.completion-indicator:after{
+.complete>.completion-indicator:after{
     content: "\f024";
     font-family: FontAwesome;
     color: mediumseagreen;
