administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -77,7 +77,7 @@
     font-family: FontAwesome;
 }
 .complete>.completion-indicator:after{
-    content: "\f024";
+    content: "\f00c";
     font-family: FontAwesome;
     color: mediumseagreen;
 }
