administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -96,7 +96,7 @@
 
 
 .attachment-indicator:before{
-    content: "\f10c";
+    content: "\f0c6";
     font-family: FontAwesome;
     position: absolute;
     left: -3px;
