administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -83,7 +83,7 @@
 }
 
 .complete>.completion-indicator:before{
-    content: "\f0c6";
+    content: "\f058";
     font-family: FontAwesome;
     color: mediumseagreen;
     position: absolute;
