administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -79,7 +79,7 @@
     left: -3px;
     top: -3px;
     font-size: 20px;
-    color: gray;
+    color: rgba(128, 128, 128, 0.5);
 }
 
 .complete>.completion-indicator:before{
