--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2489,6 +2489,14 @@ ul.user-roles:hover>li.active {
     filter: grayscale(1);
 }
 
+.user-profile-icon>span {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+}
+
 ul.inline-filter {
     display: block;
     width: 100%;
