administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -22,14 +22,20 @@ $highlightBtnColor:#efa82c;
                 width: 20px;
                 height: 20px;
             }
-            &.default-icon>span{
-                background-color:white;
-            }
+            
         }
     }
     
     
     
+}
+
+
+.user-profile-icon {
+    
+    &.default-icon>span{
+        background-color:white;
+    }
 }
 
 .navigation-menu ul li.active {
