administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -44,3 +44,12 @@ $highlightBtnColor:#efa82c;
 }
 
 
+.left-panel .user-detail .editable{
+    &:after {
+        display: none;
+    }
+    &.inline-logout {
+        display: none;
+    }
+    
+}
