administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -48,7 +48,7 @@ $highlightBtnColor:#efa82c;
     &:after {
         display: none;
     }
-    &.inline-logout {
+    .inline-logout {
         display: none;
     }
     
