--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -74,3 +74,7 @@ $highlightBtnColor:#efa82c;
 .navigation-menu li.menu-main-users {
     display: none;
 }
+
+.navigation-menu ul button:focus {
+    outline: none;
+}
