administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -398,7 +398,7 @@ button.primary-btn.nav-new-btn:hover {
 
 
 
-.search-container{
+.search-panel .user-detail{
     .field-value-module{
         button.inline-logout {
             display: none;
