administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -399,7 +399,14 @@ button.primary-btn.nav-new-btn:hover {
 
 
 .search-panel .user-detail{
+    
+
     .field-value-module{
+        
+        &.user-name {
+            line-height: 45px;
+        }
+        
         button.inline-logout {
             display: none;
         }
