administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -405,6 +405,7 @@ button.primary-btn.nav-new-btn:hover {
         
         &.user-name {
             line-height: 45px;
+            margin-right: 10px;
         }
         
         button.inline-logout {
