administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -71,7 +71,7 @@ $highlightBtnColor:#efa82c;
 
 
 
-.navigation-menu li{
+.navigation-menu .menu-main li{
     &.menu-main-users {
         display: none;
     }
