administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -78,7 +78,7 @@ $highlightBtnColor:#efa82c;
     &.menu-main-projects {
         display: none;
     }
-    &.menu-main-tracking {
+    &.menu-main-timetracking {
         display: none;
     }
      &.menu-main-documents {
