administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -84,6 +84,9 @@ $highlightBtnColor:#efa82c;
      &.menu-main-documents {
         display: none;
     }
+    &.menu-main-reports {
+        display: none;
+    }
 }
 .navigation-menu ul button:focus {
     outline: none;
