administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -43,6 +43,10 @@
 .navigation-menu li.menu-main-archive:before{
     content: "\f187";
 }
+.navigation-menu li.menu-main-messages:before{
+    content: "\f0e6";
+}
+
 
 
 
