administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -46,6 +46,10 @@
 .navigation-menu li.menu-main-messages:before{
     content: "\f0e6";
 }
+.navigation-menu li.menu-main-messages:before{
+    content: "\f15c";
+}
+
 
 
 
