administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -46,7 +46,7 @@
 .navigation-menu li.menu-main-messages:before{
     content: "\f0e6";
 }
-.navigation-menu li.menu-main-messages:before{
+.navigation-menu li.menu-main-documents:before{
     content: "\f15c";
 }
 
