administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -53,7 +53,9 @@
 .navigation-menu li.menu-main-timetracking:before{
     content: "\f017";
 }
-
+.navigation-menu li.menu-main-reports:before{
+    content: "\f080";
+}
 
 
 
