administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -88,6 +88,19 @@ $highlightBtnColor:#efa82c;
         display: none;
     }
 }
+
+.navigation-menu .menu-people li{
+    &.menu-people-projectmembers{
+         display: none;
+    }
+    &.menu-people-users{
+         display: none;
+    }
+    &.menu-community-users{
+         display: none;
+    }
+}
+
 .navigation-menu ul button:focus {
     outline: none;
 }
