administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -101,6 +101,10 @@ $highlightBtnColor:#efa82c;
     }
 }
 
+.navigation-menu ul.menu-community, .navigation-menu ul.menu-configuration {
+    display: none;
+}
+
 .navigation-menu ul button:focus {
     outline: none;
 }
