administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -446,7 +446,7 @@ button.primary-btn.nav-new-btn:hover {
      &.menu-main-documents {
         display: none;
     }
-    &.menu-main-reports {
+    &.menu-main-messages {
         display: none;
     }
 }
