administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -127,3 +127,8 @@ button.inline-btn.add, button.primary-btn {
 [data-view="projectsOverviewDetail"] .inline-btn.sort{
     display:none;
 }
+[data-view="tasksOverviewListDetail"] .inline-btn.sort.filter {
+    display: none;
+}
+
+
