administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -1,6 +1,13 @@
 $highlightBtnColor:#efa82c;
 
 
+
+
+.section-title {
+    font-weight: 400;
+    font-size: 25px;
+}
+
 .priority-indicator{
     display:none;
 }
